# qa_guru_mobile_auto-1

./: .gitignore  pyproject.toml
tests/: conftest.py  running_session.py
tests/android/: demostack.py  test_demostack.py
